# v1/device/main.go
@@ -7,8 +7,10 @@ import (
 
 func Routes(r *echo.Group) {
 	r.POST("/mio/forwardtelemetry", ingestTelemetry)
+	r.POST("/mio/forwardstatus", ingestStatus)
 
 	r.GET("/mio/telemetry/:id", getTelemetry, middleware.NotGuest)
+	r.GET("/mio/status/:id", getStatus, middleware.NotGuest)
 
 	r.GET("/device/:id", getDevice, middleware.NotGuest)
 	r.PATCH("/device/:id", updateDevice, middleware.NotGuest)
